# Covid

./: .gitignore  ODESolver.py  README.md  covid.py  custom_config.yml  pyproject.toml  sir.py  sizr.py
