[tool.poetry]
name = "Covid"
version = "1.0.0"
description = ""
authors = ["Sal"]

[tool.poetry.dependencies]
python = "==3.8.10"
manimgl = "^1.3.0" # 3 versions exist (see below)
# https://docs.manim.community/en/stable/installation/versions.html?highlight=OpenGL#which-version-to-use


[tool.poetry.dev-dependencies]
black = "==19.10b0"
flake8-black = "==0.1.1"
docformatter = "==1.4"
flake8-bugbear = "==21.4.3"
flake8-builtins = "==1.5.3"
flake8-print = "==4.0.0"
isort = "==5.8.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
